@@ -7,6 +7,7 @@
 % undocu (FIXME)
 \alias{show,ddenseMatrix-method}
 \alias{coerce,ddenseMatrix,matrix-method}
+\alias{coerce,ddenseMatrix,dgeMatrix-method}
 %
 \alias{Arith,ddenseMatrix,ddenseMatrix-method}
 \alias{Arith,ddenseMatrix,numeric-method}
